# mechanismlens

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API.md  AUDIT_PROTOCOL.md  DEVELOPMENT.md  EXAMPLES.md  EXPERIMENTS.md  FAILURE_TAXONOMY.md  FRAMING.md  ROADMAP.md  VISION.md
experiments/: __init__.py
experiments/worldmodel2d/: README.md  __init__.py  dataset.py  env.py  evaluate.py  models.py  run_experiment.py  train.py
mechanismlens/: __init__.py  audit_suite.py  benchmark.py  cli.py  recommendations.py  report.py  schema.py
mechanismlens/adapters/: __init__.py  json_adapter.py  numpy_adapter.py
mechanismlens/contracts/: __init__.py  base.py  generic_trajectory.py  toy_rigid_body.py
mechanismlens/examiners/: __init__.py  causal_examiner.py  cross_layer_examiner.py  decision_examiner.py  physics_examiner.py  semantic_examiner.py
mechanismlens/examples/: benchmark_cases.py  run_toy_benchmark.py  toy_counterfactual_demo.py  toy_decision_risk_demo.py  toy_rollout_demo.py
mechanismlens/experiments/: __init__.py  analysis.py  plots.py  run_synthetic_experiment.py  synthetic_generator.py
mechanismlens/metrics/: __init__.py  causal.py  cross_layer.py  decision.py  horizon.py  physics.py  semantic.py
tests/: test_benchmark.py  test_cli.py  test_contracts.py  test_counterfactual_audit.py  test_decision_risk.py  test_experiments.py  test_horizon_metrics.py  test_physics_contract.py  test_report.py  test_report_polish.py  test_worldmodel2d.py
