[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mechanismlens"
version = "0.8.0"
description = "Cross-layer diagnostics for semantic-causal-physical world model rollouts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MechanismLens contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
mechanismlens = "mechanismlens.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
